# rust-learner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_TASKS.md  README.md  rustfmt.toml  session-ses_4338.md  多语言学习指南.md  学习指南.md  进度.md
.claude/: settings.local.json
01-基础入门/: Cargo.toml  README.md  自检清单.md
01-基础入门/examples/: data_types.rs  variables.rs
01-基础入门/tests/: mod.rs
go/: README.md
go/module-01-basics/: README.md  exercises.md  go.mod  综合练习.md  自检清单.md
go/module-03-functions/: exercises.md
go/module-05-interfaces/: 自检清单.md
go/module-07-packages/: 综合练习.md
go/module-10-web/: README.md
learning-companion/: Cargo.toml  FIXES.md  README.md  TEST_CHECKLIST.md  TUI_DEBUG_GUIDE.md  check_tui.bat
learning-companion-web/: BUGFIX_CONTENT_MIXING.md  README.md
learning-companion-web/client/: index.html  package.json  tailwind.config.cjs  tailwind.config.js
learning-companion-web/server/: .env  Cargo.toml
learning-companion-web/server/src/: api.rs  db.rs  main.rs  models.rs
learning-companion/src/: db.rs  exercise.rs  lib.rs  main.rs  notify.rs  progress.rs  repo.rs  storage.rs  tui.rs  ui.rs
learning-companion/tests/: cli.rs  integration.rs
module-01-basics/: Cargo.toml  README.md  exercises.md  综合练习.md
module-01-basics/examples/: data_types.rs  functions.rs
module-01-basics/exercises/: exercise1_temperature.rs  exercise3_distance.rs  exercise4_shadowing.rs
module-01-basics/tests/: mod.rs
module-02-ownership/: Cargo.toml  README.md  exercises.md  综合练习.md  自检清单.md
module-02-ownership/examples/: borrowing.rs  move_semantics.rs  ownership_basics.rs  references.rs  slices.rs
module-02-ownership/exercises/: README.md  exercise1_ownership_transfer.rs  exercise2_function_ownership.rs  exercise4_mutable_reference.rs
module-02-ownership/src/: lib.rs
module-02-ownership/tests/: mod.rs
module-03-structs-enums/: Cargo.toml  README.md
module-03-structs-enums/examples/: enums.rs  methods.rs  result_enum.rs  structs.rs
module-03-structs-enums/exercises/: exercise10_blog_post.rs  exercise1_book_struct.rs  exercise3_traffic_light.rs  exercise4_shape_area.rs  exercise5_option_type.rs  exercise6_result_type.rs  exercise7_match_exhaustiveness.rs  exercise8_if_let.rs  exercise9_nested_structs.rs
module-03-structs-enums/src/: lib.rs
module-04-lifetimes/: README.md  综合练习.md
module-04-patterns/: Cargo.toml  README.md  自检清单.md
module-04-patterns/examples/: if_let.rs  match_basics.rs  patterns.rs
module-04-patterns/exercises/: exercise10_nested_destruct.rs  exercise1_basic_match.rs  exercise4_match_enum.rs  exercise5_match_guards.rs  exercise7_ignore_values.rs  exercise8_if_let.rs  exercise9_while_let.rs
module-04-patterns/exercises/solutions/: exercise1_basic_match.rs  exercise2_match_option.rs  exercise3_destruct_struct.rs  exercise5_match_guards.rs  exercise6_at_binding.rs  exercise7_ignore_values.rs  exercise9_while_let.rs
module-04-patterns/src/: lib.rs
module-05-error-handling/: Cargo.toml  README.md  exercises.md  自检清单.md
module-05-error-handling/examples/: error_propagation.rs  panic.rs
module-05-error-handling/exercises/: exercise10_error_context.rs  exercise1_result_basics.rs  exercise2_option_conversion.rs  exercise4_error_propagation.rs  exercise5_chaining.rs  exercise6_custom_error.rs  exercise7_unwrap_or.rs
module-05-error-handling/exercises/solutions/: exercise10_error_context.rs  exercise1_result_basics.rs  exercise2_option_conversion.rs  exercise4_error_propagation.rs  exercise5_chaining.rs  exercise7_unwrap_or.rs  exercise9_combining_results.rs
module-05-error-handling/src/: lib.rs
module-05-error-handling/tests/: mod.rs
module-05-patterns/: 综合练习.md
module-06-collections/: Cargo.toml  README.md  exercises.md  自检清单.md
module-06-collections/examples/: hashmap.rs  hashset.rs  vec_basics.rs
module-06-collections/exercises/: exercise1_vec_basics.rs  exercise2_hashmap_basics.rs  exercise4_vec_iterator.rs  exercise7_hashmap_convert.rs  exercise8_set_operations.rs  exercise9_sort_group.rs
module-06-collections/exercises/solutions/: exercise10_btreemap.rs  exercise2_hashmap_basics.rs  exercise3_hashset.rs  exercise6_vec_search.rs
module-06-collections/src/: lib.rs
module-06-collections/tests/: mod.rs
module-06-error-handling/: README.md  exercises.md
module-07-collections/: README.md
module-07-generics/: Cargo.toml
module-07-traits-generics/: README.md  exercises.md
module-08-lifetimes/: Cargo.toml  README.md  自检清单.md
module-08-traits-generics/: 自检清单.md
module-09-concurrency/: Cargo.toml  README.md  exercises.md  综合练习.md  自检清单.md
module-10-project/: Cargo.toml  README.md  exercises.md  自检清单.md
module-11-smart-pointers/: Cargo.toml  README.md  exercises.md  综合练习.md
module-12-iterators/: Cargo.toml  README.md  综合练习.md
python/: README.md
python/module-07-files/: README.md  pyproject.toml  综合练习.md
python/module-07-files/examples/: file_io.py
python/module-08-errors/: README.md  pyproject.toml  自检清单.md
python/module-08-errors/examples/: exceptions.py
python/module-12-project/: README.md  pyproject.toml
python/module-12-project/examples/: task_manager.py
rust/module-02-ownership/: Cargo.toml
rust/module-02-ownership/examples/: slices.rs
rust/module-02-ownership/exercises/: exercise3_references.rs  exercise5_borrow_rules.rs  exercise6_string_slice.rs
rust/module-02-ownership/exercises/solutions/: exercise4_mutable_reference.rs
rust/module-02-ownership/src/: lib.rs
rust/module-02-ownership/tests/: mod.rs
rust/module-03-structs-enums/: Cargo.toml  exercises.md  综合练习.md  自检清单.md
rust/module-03-structs-enums/examples/: enums.rs  option.rs  structs.rs
rust/module-03-structs-enums/exercises/: exercise2_rectangle_methods.rs  exercise3_traffic_light.rs  exercise7_match_exhaustiveness.rs  exercise8_if_let.rs  exercise9_nested_structs.rs
rust/module-03-structs-enums/exercises/solutions/: exercise10_blog_post.rs  exercise7_match_exhaustiveness.rs  exercise8_if_let.rs  exercise9_nested_structs.rs
模板/: README.md  exercises.md  综合练习.md  自检清单.md
(+326 files in other folders)
