[workspace]
members = [
    "module-01-basics",
    "module-02-ownership",
    "module-03-structs-enums",
    "module-04-patterns",
    "module-05-error-handling",
    "module-06-collections",
    "module-07-generics",
    "module-08-lifetimes",
    "module-09-concurrency",
    "module-10-project",
]
exclude = [
    "learning-companion",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# 这里可以添加所有模块共享的依赖
