[workspace]
members = [
    "module-01-basics",
    "module-02-ownership",
    "module-03-structs-enums",
    "module-04-lifetimes",
    "module-05-patterns",
    "module-06-error-handling",
    "module-07-collections",
    "module-08-traits-generics",
    "module-09-concurrency",
    "module-10-project",
    "module-11-smart-pointers",
]
exclude = [
    "learning-companion",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# 这里可以添加所有模块共享的依赖
