[workspace]
resolver = "2"
members = [
    "rust/module-01-basics",
    "rust/module-02-ownership",
    "rust/module-03-structs-enums",
    "rust/module-04-lifetimes",
    "rust/module-05-patterns",
    "rust/module-06-error-handling",
    "rust/module-07-collections",
    "rust/module-08-traits-generics",
    "rust/module-09-concurrency",
    "rust/module-10-project",
    "rust/module-11-smart-pointers",
    "rust/module-12-iterators",
    "learning-companion-web/server",
]
exclude = [
    "learning-companion",
    "learning-companion-web/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# 这里可以添加所有模块共享的依赖
