[package]
name = "learning-companion"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }
# 终端 UI
ratatui = "0.26"
crossterm = "0.27"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日期时间
chrono = { version = "0.4", features = ["serde"] }
# 文件系统
walkdir = "2.5"
# 正则表达式
regex = "1.11"
# 数据库
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# 系统通知
notify-rust = "4.11"
# 随机数
rand = "0.8"
# 错误处理
anyhow = "1.0"
# 目录路径
dirs = "5.0"
