[package]
name = "learning-companion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
dirs = "5.0"

tokio = { version = "1", features = ["full"] }
